tests/paczka1/small_fuzzy/74850306.err
Error in line 1: A923 A923 53,5
Error in line 3: VO6BvG A442 71,38
Error in line 2: A923 S244 19,1
Error in line 11: A923 A442 69,28
